--- a/manik_broadcast_receiver.html
+++ b/manik_broadcast_receiver.html
@@ -32,7 +32,7 @@ An Example:
 <br>
 <div class="row justify-content-md-center">
 <img class="img-fluid text-center"
-src = "http://127.0.0.1:8000/media/blog/22/demo.gif">
+src = "Desktop\broadcastreceiverdemo.gif">
 </div>
 <br><br><br>
 
